--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,9 @@ $hover_scondary_color: #eca447;
 $panel_background_color: #1a236c;
 $first_background_color: #051745;
 
+$money_dark_grey: #5a5759;
+$money_light_grey: #818e9d;
+
 @import "../src/partials/commons";
 
 .button {
@@ -211,6 +214,226 @@ header {
       img {
         width: 100%;
         margin-bottom: $spacing - 15px;
+      }
+    }
+  }
+}
+
+.plans {
+  background-image: url(../images/background1.jpg);
+  background-size: 100%;
+  padding: $spacing * 3 0;
+  text-align: center;
+
+  .wrapper-panels {
+    color: black;
+
+    h1 {
+      margin-bottom: $spacing / 3;
+    }
+
+    div {
+      padding: ($spacing + 10px) (($spacing * 2)+9px);
+      p {
+        padding-bottom: $spacing;
+        color: $money_dark_grey;
+
+        &:first-of-type {
+          padding-top: $spacing / 3;
+        }
+
+        &:last-of-type {
+          padding-bottom: $spacing + 5px;
+        }
+      }
+    }
+
+    .money {
+      position: relative;
+      padding: 0;
+
+      .int,
+      .dollar,
+      .decimal,
+      .time {
+        font-weight: bold;
+      }
+
+      .int {
+        font-size: $font_size * 2.5;
+        color: $third_color;
+      }
+
+      .dollar {
+        position: absolute;
+        top: 7px;
+        left: 20px;
+        color: $money_dark_grey;
+      }
+
+      .decimal {
+        position: absolute;
+        top: 7px;
+        left: 63px;
+        font-size: $font_size - 4px;
+        color: $third_color;
+      }
+
+      .time {
+        position: absolute;
+        bottom: 10px;
+        left: 63px;
+        font-size: $font_size / 2;
+        font-style: italic;
+        color: $money_light_grey;
+      }
+    }
+
+    .button {
+      background-color: white;
+      color: $money_dark_grey;
+      border: 1px solid $money_dark_grey;
+
+      &:hover {
+        background-color: $secondary_color;
+        color: white;
+        border: 1px solid $secondary_color;
+      }
+    }
+  }
+}
+
+.news {
+  padding: $spacing * 3 0;
+  text-align: center;
+  color: black;
+  background-color: $primary_color;
+
+  .wrapper-text {
+    p {
+      margin-bottom: $spacing * 2;
+    }
+  }
+
+  .wrapper-news {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: $spacing * 2;
+
+    div {
+      margin: $spacing - 8px;
+
+      img {
+        width: 300px;
+        margin-bottom: $spacing / 4;
+      }
+
+      p {
+        font-weight: lighter;
+      }
+
+      h3 {
+        color: $secondary_color;
+        margin-bottom: $spacing / 4;
+      }
+
+      p {
+        &:first-of-type {
+          font-size: $font_size - 4px;
+          margin-bottom: $spacing / 3;
+        }
+      }
+    }
+  }
+}
+
+.clients {
+  padding: $spacing * 3 0;
+  text-align: center;
+  color: black;
+
+  .wrapper-clients {
+    display: flex;
+    justify-content: center;
+
+    div {
+      width: 55%;
+      h1 {
+        font-weight: bold;
+        font-size: $font_size * 2;
+        margin-bottom: $spacing * 2;
+      }
+
+      img {
+        width: 120px;
+        border-radius: 50%;
+        margin-bottom: $spacing;
+      }
+
+      p {
+        font-weight: lighter;
+        &:first-of-type {
+          font-style: italic;
+          margin-bottom: $spacing;
+        }
+
+        &:last-of-type {
+          font-weight: bold;
+          margin-bottom: $spacing;
+
+          span {
+            font-weight: 300;
+          }
+        }
+      }
+
+      i {
+        font-size: $font_size - 5px;
+        margin-right: $spacing / 4;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+  .hr {
+    padding: $spacing * 2 0;
+    div {
+      height: 1px;
+      background-color: lightgray;
+      display: block;
+      width: 90%;
+      margin: auto;
+    }
+  }
+
+  .wrapper-logo {
+    display: flex;
+    justify-content: space-around;
+
+    div {
+      flex-basis: 90px;
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.consulation {
+  padding: $spacing * 5 0;
+  text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
+    url("../images/case-study-gallery-3-1-1200x900.jpg");
+  background-size: 100%;
+  background-position: left 60% top 30%;
+
+  .wrapper-text {
+    div {
+      p {
+        margin-bottom: $spacing;
       }
     }
   }
