--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,6 +70,7 @@ header {
           color: $secondary_color;
           text-transform: uppercase;
           font-size: $font_size - 2px;
+          margin-left: $spacing / 5;
 
           &:hover {
             transition: color 0.3s;
@@ -476,6 +477,7 @@ header {
             text-decoration: none;
 
             &:hover {
+              transition: color 0.3s;
               color: $secondary_color;
             }
           }
