Added all partials in styles and fixed html

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,529 +1,13 @@
-$font_family: "Source Sans Pro", Arial, Helvetica, sans-serif;
-
-$spacing: 20px;
-$font_size: 14px;
-
-$primary_color: #f8f8f8;
-$secondary_color: #ffa837;
-$third_color: #0369d7;
-$hover_third_color: #351ba2;
-$hover_scondary_color: #eca447;
-$panel_background_color: #1a236c;
-$first_background_color: #051745;
-
-$money_dark_grey: #5a5759;
-$money_light_grey: #818e9d;
-
+@import "../src/partials/variables";
 @import "../src/partials/commons";
-
-.button {
-  color: $primary_color;
-  padding: ($spacing / 2) $spacing;
-  background-color: $secondary_color;
-  border-radius: 20px;
-  font-size: $font_size - 4px;
-  border: none;
-  text-transform: uppercase;
-
-  &:hover {
-    transition: background-color 0.3s;
-    cursor: pointer;
-    background-color: $hover_scondary_color;
-  }
-}
-
-header {
-  background-image: url("../images/1-hero-image.png");
-  padding: $spacing 0;
-  background-size: 100%;
-
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    img {
-      width: 120px;
-    }
-
-    ul {
-      list-style: none;
-      display: flex;
-
-      li {
-        padding: $spacing / 2;
-
-        a {
-          text-decoration: none;
-          color: $primary_color;
-          padding: ($spacing / 2) 0;
-
-          &:hover {
-            transition: color 0.3s;
-            color: $secondary_color;
-          }
-        }
-
-        span {
-          border: 1px solid $secondary_color;
-          padding: ($spacing / 10) ($spacing / 2);
-          border-radius: 5px;
-          color: $secondary_color;
-          text-transform: uppercase;
-          font-size: $font_size - 2px;
-          margin-left: $spacing / 5;
-
-          &:hover {
-            transition: color 0.3s;
-            cursor: pointer;
-            color: $hover_scondary_color;
-          }
-        }
-      }
-    }
-  }
-
-  .campaigns {
-    padding: ($spacing * 5) 0;
-    div {
-      width: 50%;
-
-      h1 {
-        font-size: $font_size * 3;
-        font-weight: bold;
-        padding: ($spacing / 2) 0;
-      }
-
-      p {
-        padding: ($spacing / 2) 0;
-        padding-bottom: $spacing;
-        width: 80%;
-        font-weight: lighter;
-      }
-
-      .button {
-        margin: $spacing / 2 0;
-
-        &:hover {
-          cursor: pointer;
-          background-color: $hover_scondary_color;
-        }
-
-        &:first-of-type {
-          margin-right: $spacing - 12px;
-        }
-
-        &:last-of-type {
-          background-color: $third_color;
-
-          &:hover {
-            background-color: $hover_third_color;
-            cursor: pointer;
-          }
-        }
-      }
-    }
-  }
-}
-
-.template {
-  color: black;
-  text-align: center;
-  padding-top: $spacing * 3;
-  background-color: $primary_color;
-
-  img {
-    object-fit: contain;
-    width: 70%;
-  }
-}
-
-.wrapper-text {
-  display: flex;
-  justify-content: center;
-  div {
-    width: 50%;
-    h1 {
-      font-size: $font_size * 2;
-      margin-bottom: $spacing;
-    }
-
-    p {
-      font-weight: lighter;
-    }
-  }
-}
-
-.wrapper-panels {
-  display: flex;
-  justify-content: space-around;
-  padding-top: $spacing * 2;
-  div {
-    margin: $spacing / 2;
-    background-color: white;
-    padding: $spacing + ($spacing / 2);
-
-    i {
-      color: $secondary_color;
-      margin-bottom: $spacing / 2;
-      font-size: $font_size * 2;
-    }
-
-    h3 {
-      font-weight: bold;
-      font-size: $font_size + 8px;
-      margin-bottom: $spacing / 2;
-    }
-
-    p {
-      font-weight: lighter;
-    }
-  }
-}
-
-.services {
-  background-color: $first_background_color;
-  background-image: url(../images/pattern_background.png);
-  background-size: 100%;
-  padding: $spacing * 3 0;
-  text-align: center;
-
-  .wrapper-panels {
-    div {
-      background-color: $panel_background_color;
-
-      i {
-        margin-bottom: $spacing + 6px;
-      }
-
-      p {
-        margin-bottom: $spacing / 2;
-      }
-
-      a {
-        text-decoration: none;
-        color: $secondary_color;
-
-        &:hover {
-          transition: color 0.3s;
-          color: $hover_scondary_color;
-        }
-      }
-    }
-  }
-}
-
-.work {
-  padding: $spacing * 3 0;
-  text-align: center;
-  color: black;
-
-  .wrapper-image {
-    margin: $spacing * 2 0;
-    display: flex;
-    justify-content: center;
-    div {
-      flex-basis: 250px;
-      margin: 0 $spacing - 15px;
-      img {
-        width: 100%;
-        margin-bottom: $spacing - 15px;
-      }
-    }
-  }
-}
-
-.plans {
-  background-image: url(../images/background1.jpg);
-  background-size: 100%;
-  padding: $spacing * 3 0;
-  text-align: center;
-
-  .wrapper-panels {
-    color: black;
-
-    h1 {
-      margin-bottom: $spacing / 3;
-    }
-
-    div {
-      padding: ($spacing + 10px) (($spacing * 2)+9px);
-      p {
-        padding-bottom: $spacing;
-        color: $money_dark_grey;
-
-        &:first-of-type {
-          padding-top: $spacing / 3;
-        }
-
-        &:last-of-type {
-          padding-bottom: $spacing + 5px;
-        }
-      }
-    }
-
-    .money {
-      position: relative;
-      padding: 0;
-
-      .int,
-      .dollar,
-      .decimal,
-      .time {
-        font-weight: bold;
-      }
-
-      .int {
-        font-size: $font_size * 2.5;
-        color: $third_color;
-      }
-
-      .dollar {
-        position: absolute;
-        top: 7px;
-        left: 20px;
-        color: $money_dark_grey;
-      }
-
-      .decimal {
-        position: absolute;
-        top: 7px;
-        left: 63px;
-        font-size: $font_size - 4px;
-        color: $third_color;
-      }
-
-      .time {
-        position: absolute;
-        bottom: 10px;
-        left: 63px;
-        font-size: $font_size / 2;
-        font-style: italic;
-        color: $money_light_grey;
-      }
-    }
-
-    .button {
-      background-color: white;
-      color: $money_dark_grey;
-      border: 1px solid $money_dark_grey;
-
-      &:hover {
-        background-color: $secondary_color;
-        color: white;
-        border: 1px solid $secondary_color;
-      }
-    }
-  }
-}
-
-.news {
-  padding: $spacing * 3 0;
-  text-align: center;
-  color: black;
-  background-color: $primary_color;
-
-  .wrapper-text {
-    p {
-      margin-bottom: $spacing * 2;
-    }
-  }
-
-  .wrapper-news {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: $spacing * 2;
-
-    div {
-      margin: $spacing - 8px;
-
-      img {
-        width: 300px;
-        margin-bottom: $spacing / 4;
-      }
-
-      p {
-        font-weight: lighter;
-      }
-
-      h3 {
-        color: $secondary_color;
-        margin-bottom: $spacing / 4;
-      }
-
-      p {
-        &:first-of-type {
-          font-size: $font_size - 4px;
-          margin-bottom: $spacing / 3;
-        }
-      }
-    }
-  }
-}
-
-.clients {
-  padding: $spacing * 3 0;
-  text-align: center;
-  color: black;
-
-  .wrapper-clients {
-    display: flex;
-    justify-content: center;
-
-    div {
-      width: 55%;
-      h1 {
-        font-weight: bold;
-        font-size: $font_size * 2;
-        margin-bottom: $spacing * 2;
-      }
-
-      img {
-        width: 120px;
-        border-radius: 50%;
-        margin-bottom: $spacing;
-      }
-
-      p {
-        font-weight: lighter;
-        &:first-of-type {
-          font-style: italic;
-          margin-bottom: $spacing;
-        }
-
-        &:last-of-type {
-          font-weight: bold;
-          margin-bottom: $spacing;
-
-          span {
-            font-weight: 300;
-          }
-        }
-      }
-
-      i {
-        font-size: $font_size - 5px;
-        margin-right: $spacing / 4;
-
-        &:hover {
-          cursor: pointer;
-        }
-      }
-    }
-  }
-
-  .hr {
-    padding: $spacing * 2 0;
-    div {
-      height: 1px;
-      background-color: lightgray;
-      display: block;
-      width: 90%;
-      margin: auto;
-    }
-  }
-
-  .wrapper-logo {
-    display: flex;
-    justify-content: space-around;
-
-    div {
-      flex-basis: 90px;
-      img {
-        width: 100%;
-      }
-    }
-  }
-}
-
-.consulation {
-  padding: $spacing * 5 0;
-  text-align: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
-    url("../images/case-study-gallery-3-1-1200x900.jpg");
-  background-size: 100%;
-  background-position: left 60% top 30%;
-
-  .wrapper-text {
-    div {
-      p {
-        margin-bottom: $spacing;
-      }
-    }
-  }
-}
-
-.footer {
-  padding: $spacing * 2 0;
-  text-align: center;
-
-  .wrapper-footer {
-    display: flex;
-    justify-content: center;
-    div {
-      img {
-        width: 120px;
-        margin-bottom: $spacing + 10px;
-      }
-
-      ul {
-        list-style: none;
-        display: flex;
-        margin-bottom: $spacing + 10px;
-
-        li {
-          padding: 0 $spacing / 2;
-          a {
-            color: $money_dark_grey;
-            text-decoration: none;
-
-            &:hover {
-              transition: color 0.3s;
-              color: $secondary_color;
-            }
-          }
-        }
-      }
-
-      p {
-        color: $money_light_grey;
-        font-size: $font_size - 2px;
-        margin-bottom: $spacing;
-
-        i {
-          color: $money_light_grey;
-          font-size: $font_size - 5px;
-          margin-right: 0;
-        }
-
-        span {
-          color: black;
-
-          &:hover {
-            cursor: pointer;
-          }
-        }
-      }
-
-      i {
-        color: $money_dark_grey;
-        font-size: $font_size + 2px;
-        margin-right: $spacing - 8px;
-
-        &:hover {
-          cursor: pointer;
-        }
-      }
-    }
-  }
-
-  .chevron {
-    background-color: $money_dark_grey;
-    position: relative;
-    bottom: -45px;
-    left: 600px;
-    padding: ($spacing / 5) ($spacing - 7px);
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    color: white;
-  }
-}
+@import "../src/partials/button";
+@import "../src/partials/wrapper";
+@import "../src/partials/header";
+@import "../src/partials/template";
+@import "../src/partials/services";
+@import "../src/partials/work";
+@import "../src/partials/plans";
+@import "../src/partials/news";
+@import "../src/partials/clients";
+@import "../src/partials/consulation";
+@import "../src/partials/footer";
