--- a/src/partials/_work.scss
+++ b/src/partials/_work.scss
@@ -7,12 +7,37 @@
     margin: $spacing * 2 0;
     display: flex;
     justify-content: center;
-    div {
-      flex-basis: 250px;
-      margin: 0 $spacing - 15px;
-      img {
+    .column-image {
+      div {
+        width: 250px;
+        margin: 0 $spacing - 15px;
+        position: relative;
+        transition: transform 0.6s;
+
+        &:hover {
+          transition: display 0.6s;
+          transition: transform 0.6s;
+          transform: perspective(800px) translateZ(30px);
+          cursor: pointer;
+          .hover {
+            transition: background-color 0.6s;
+            background-color: rgba($color: #000000, $alpha: 0.6);
+            transform: perspective(1000px);
+          }
+        }
+        img {
+          width: 100%;
+          margin-bottom: $spacing - 15px;
+        }
+      }
+      .hover {
+        position: absolute;
+        background-color: rgba($color: #000000, $alpha: 0);
+        top: 0;
+        left: -5px;
         width: 100%;
-        margin-bottom: $spacing - 15px;
+        height: 96%;
+        transition: background-color 0.6s;
       }
     }
   }
