--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -21,7 +21,7 @@ header {
 
         a {
           text-decoration: none;
-          color: $primary_color;
+          color: white;
           padding: ($spacing / 2) 0;
 
           &:hover {
