--- a/src/partials/_template.scss
+++ b/src/partials/_template.scss
@@ -18,6 +18,8 @@
         transition: font-size 0.6s;
       }
       &:hover {
+        transition: box-shadow 0.6s;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         i {
           transition: font-size 0.6s;
           font-size: $font-size * 3;
