--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -18,11 +18,18 @@ header {
 
       li {
         padding: 0 $spacing / 2;
+        transition: transform 0.3s;
+
+        &:hover {
+          transition: transform 0.3s;
+          transform: perspective(800px) translateZ(60px);
+        }
 
         a {
           text-decoration: none;
           color: white;
           padding: ($spacing / 2) 0;
+          transition: color 0.3s;
 
           &:hover {
             transition: color 0.3s;
